REGRESSION(r96870): WebKit generates background: transparent on blogger.com https://bugs.webkit.org/show_bug.cgi?id=71203

Reviewed by Ojan Vafai.

Source/WebCore:

Remove the transparent background color from inline style declarations in the pasted content.
Also fixed a bug in removeStyleFromRulesAndContext that it removes properties in inline style
declarations even if those properties were overridden.

Tests: editing/deleting/merge-paragraphs-with-transparent-background.html
       editing/deleting/paste-with-transparent-background-color.html

* editing/EditingStyle.cpp:
(WebCore::removePropertiesInStyle):
(WebCore::EditingStyle::removeStyleFromRulesAndContext):
(WebCore::EditingStyle::removePropertiesInElementDefaultStyle):

LayoutTests:

Added a test to merge paragraphs inside a document with background: transparent, and a test to
cut and paste contents with background: transparent, which is overriding a style rule background: blue.

WebKit should preserve the appearance of the pasted content but should not add a redundant
background: transparent.

* editing/deleting/merge-paragraphs-with-transparent-background-expected.txt: Added.
* editing/deleting/merge-paragraphs-with-transparent-background.html: Added.
* editing/deleting/paste-with-transparent-background-color-expected.txt: Added.
* editing/deleting/paste-with-transparent-background-color.html: Added.


Canonical link: https://commits.webkit.org/87660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99067 268f45cc-cd09-0410-ab3c-d52691b4dbfc